# rs-depcycle

./: README.md
depcycle-x/: Cargo.toml
depcycle-y/: Cargo.toml
